gateway-manifests/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecommerce-route-argocd
  namespace: argocd

spec:
  parentRefs:
  - name: ecommerce-gateway
    namespace: default

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd

    backendRefs:
    - name: argocd-server
      port: 80
