gateway-manifests/httproute-arocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecommerce-route-argocd
  namespace: argocd

spec:
  parentRefs:
  - name: ecommerce-gateway

  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /argocd

    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /

    backendRefs:
    - name: argocd-server
      port: 80
